# Tinllm

./: .tin_env  Dockerfile  Makefile  README.md  docker-compose.yml  openai_server.py  tinllm.service
.github/workflows/: ci.yml
c/: Makefile  backend_cuda.cu  backend_cuda.h  backend_loader.c  backend_metal.h  backend_metal.mm  build_cuda.bat  coli  compat.h  decode_batch.h  doctor.py  download_fp8.py  glm  glm.c  grammar.h  iobench  iobench.c  models.json  olmoe.c  openai_server.py  resource_plan.py  setup.sh  tier.h  tin  tin.c  tin_async_io.h  tin_batch.h  tin_cache.h  tin_cuda.h  tin_flash_attn.h  tin_grammar.h  tin_kv.h  tin_kv_persist.h  tin_lib.c  tin_mtp.h  tin_paged_kv.h  tin_predictive_router.h  tin_quant_nvfp4.h  tin_router.h  tin_sampler.h  (+9 more)
c/scripts/: run.sh  supervisor.sh
c/tests/: audit_win_shims.c  bench_tensor_core.cu  test_backend_metal.mm  test_benchmark_cuda_fixture.py  test_cli_output.py  test_compat_direct  test_decode_batch  test_decode_batch.c  test_grammar  test_i4_acc512  test_idot  test_json  test_json.c  test_kv_alloc  test_makefile_platform.py  test_openai_server.py  test_schema_gbnf  test_st  test_tier  test_tier.c  (+2 more)
desktop/: README.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
docs/: BENCHMARKS.md  ENVIRONMENT.md  NEXT_GEN_UPGRADE_ROADMAP.md  SETTINGS.md  TINLLM_GUIDE.md  UPGRADE_SUGGESTIONS_BY_FILE.md  WEB_UI_FEATURES.md  grammar-draft.md
web/: README.md  index.html  package-lock.json  package.json
(+26 files in other folders)
