[package]
name = "tinllm-desktop"
version = "1.2.0"
description = "Native desktop shell for the TinLLM inference engine"
authors = ["TinLLM contributors"]
edition = "2024"
rust-version = "1.85"

[lib]
name = "tinllm_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.5", features = [] }
